# obesity

./: .gitignore  README.md  pyproject.toml
data/: ObesityDataSet.csv  obesity_final.csv  obesity_red.csv  obesity_transform.csv
notebooks/: 0-dataset_analysis.ipynb
notebooks/1-Data_cleaning/: 1-transformación_variables.ipynb  2-nulos.ipynb  3-stats.ipynb  transformación_variables.ipynb
notebooks/2-Feature_selection/: 1-Dim_reduction.ipynb  2-RF_selection.ipynb
notebooks/2-Variables_selection/: Analysis_red.ipynb  Feature_Selection.ipynb  Obesidad_red_dim.ipynb  RF.ipynb
notebooks/3-Models/: Transforms&Split.ipynb  df_full.csv  test.csv  test_regression.csv  train.csv  train_regression.csv
notebooks/3-Models/AutoML/: automl.ipynb
notebooks/3-Models/CatBoost/: Catboost.ipynb
notebooks/3-Models/Clustering/: kmeans.ipynb  kmeans_nclasses.ipynb  mean_df.csv  std_df.csv
notebooks/3-Models/DeepLearning/: dl_classification.ipynb
notebooks/3-Models/LGBM/: Catboost.ipynb  LGBM.ipynb
notebooks/3-Models/RF y XBoost problema con poetry/: KNN.ipynb  Xgboost_y_RF.ipynb
notebooks/3-Models/RF-XGBoost/: Rf_mejorado_con_mi_clasificacion_original_y_train_test_02_08_.ipynb
