[tool.poetry]
name = "obesity"
version = "0.1.0"
description = ""
authors = ["ikeryanez <ikeryanez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"
numpy = "^1.26.4"
optuna = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
