[tool.poetry]
name = "obesity"
version = "0.1.0"
description = ""
authors = ["ikeryanez <ikeryanez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
seaborn = ">=0.12.2"
numpy = "^1.26.4"
optuna = "^3.6.1"
xgboost = "^2.0.3"
statsmodels = "^0.14.1"
ydata-profiling = "^4.7.0"
ipywidgets = "^8.1.2"
tensorflow = "^2.16.1"
shap = "^0.45.0"
h2o = "^3.46.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[poetry]
build = "false"
